<resources>
    <plurals name="moviesInLibrary">
        <item quantity="one">movie</item>
        <item quantity="other">movies</item>
    </plurals>
    <plurals name="collectionsInLibrary">
        <item quantity="one">collection</item>
        <item quantity="other">collections</item>
    </plurals>
    <plurals name="showsInLibrary">
        <item quantity="one">show</item>
        <item quantity="other">shows</item>
    </plurals>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="hour_short">
        <item quantity="one">hr</item>
        <item quantity="other">hrs</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="minute_short">
        <item quantity="one">min</item>
        <item quantity="other">mins</item>
    </plurals>
    <plurals name="seasons_selected">
        <item quantity="one">season selected</item>
        <item quantity="other">seasons selected</item>
    </plurals>
    <plurals name="episodes_selected">
        <item quantity="one">episode selected</item>
        <item quantity="other">episodes selected</item>
    </plurals>
    <plurals name="file_location">
        <item quantity="one">File location</item>
        <item quantity="other">File locations</item>
    </plurals>
    <string name="content_description_image_backdrop">Background image</string>
    <string name="content_description_cover_image">Cover image</string>
    <string name="content_description_no_content_icon">No content icon</string>
    <string name="app_name">Mizuu</string>
    <string name="app_name_movies">Mizuu - movies</string>
    <string name="app_name_tvshows">Mizuu - TV shows</string>
    <string name="settings_name">Settings</string>
    <string name="newuser_btStartSearch">Start update</string>
    <string name="detailsReleaseDate">Release date</string>
    <string name="detailsGenre">Genres (comma-separated)</string>
    <string name="detailsRunTime">Runtime</string>
    <string name="detailsRating">Rating</string>
    <string name="detailsCertification">Certification</string>
    <string name="noInternet">No active Internet connection</string>
    <string name="errorOccured">An error occurred</string>
    <string name="updatingMovieInfo">Updating movie information…</string>
    <string name="updatingEpisodeInfo">Updating episode information…</string>
    <string name="updatingShowInfo">Updating show information…</string>
    <string name="stringNA">N/A</string>
    <string name="minutes">minutes</string>
    <string name="removeMovie">Remove movie</string>
    <string name="removeEpisode">Remove episode</string>
    <string name="removeShow">Remove TV show</string>
    <string name="failedToRemoveMovie">Could not remove movie!</string>
    <string name="failedToRemoveShow">Could not remove show!</string>
    <string name="failedToRemoveEpisode">Could not remove episode!</string>
    <string name="identifyMovieTitle">Identify movie</string>
    <string name="identifyEpisodeTitle">Identify episode</string>
    <string name="identifyShow">Identify show</string>
    <string name="prefsIdentification">Identification</string>
    <string name="stringSort">Sort</string>
    <string name="prefsSearchNavTitle">Search</string>
    <string name="prefsUI">User Interface</string>
    <string name="prefsUIGeneral">General</string>
    <string name="prefsAppFeedback">Application feedback</string>
    <string name="prefsAppFeedbackDescription">Tell the world what you think of Mizuu on Google Play.</string>
    <string name="prefsIdentificationAndSearch">Identification &amp; search</string>
    <string name="shareWith">Share with…</string>
    <string name="addedToFavs">Added to favorites!</string>
    <string name="removedFromFavs">Removed from favorites!</string>
    <string name="addedToWatchList">Added to Watchlist!</string>
    <string name="removedFromWatchList">Removed from Watchlist!</string>
    <string name="unknownYear">(unknown)</string>
    <string name="addingCover">Downloading new cover art…</string>
    <string name="coverSearchFailed">Cover art search failed!</string>
    <string name="updateCheckBox">Clear library on update</string>
    <string name="stringSearch">Search</string>
    <string name="stringNoPlot">Plot not available.</string>
    <string name="txtSelectFileSources">Select file sources</string>
    <string name="menuFavouriteTitle">Add favorite</string>
    <string name="menuFavouriteTitleRemove">Remove favorite</string>
    <string name="menuShareTitle">Share</string>
    <string name="menuRemoveTitle">Remove</string>
    <string name="menuUpdateTitle">Update library</string>
    <string name="menuAboutContact">Contact developer</string>
    <string name="noParentFolder">No parent folder!</string>
    <string name="prefsFileSourcesDescription">Configure the file sources to include in library updates.</string>
    <string name="mainUpdateBt">Update movie library</string>
    <string name="mainUpdateBtTv">Update TV show library</string>
    <string name="prefsUseLocalDataTitle">Prefer localized video info</string>
    <string name="chooserMovies">Movies</string>
    <string name="chooserTVShows">TV shows</string>
    <string name="fileSources">File sources</string>
    <string name="prefsShowGridTitlesTitle">Show titles in overview</string>
    <string name="prefsShowGridTitles">Enable movie and show titles in library overview.</string>
    <string name="enableRootAccess">Request root access</string>
    <string name="enableRootAccessDescription">Request root access at launch, can be useful for some third party applications.</string>
    <string name="detailsTrailer">Trailer</string>
    <string name="sortTitle">Sort by title</string>
    <string name="sortNewestEpisode">Sort by newest episode</string>
    <string name="sortRelease">Sort by release</string>
    <string name="sortFirstAired">Sort by first air date</string>
    <string name="sortRating">Sort by rating</string>
    <string name="sortWeightedRating">Sort by weighted rating</string>
    <string name="sortAdded">Sort by date added</string>
    <string name="sortDuration">Sort by duration</string>
    <string name="choiceOffline">Offline copies</string>
    <string name="choiceGenres">Genres</string>
    <string name="choiceAvailableFiles">Available files</string>
    <string name="stringMarkAsWatched">Mark as watched</string>
    <string name="markedAsWatched">Marked as watched!</string>
    <string name="stringMarkAsUnwatched">Mark as unwatched</string>
    <string name="stringEditMovie">Edit movie</string>
    <string name="stringEditTvShowEpisode">Edit TV show episode</string>
    <string name="stringLaunchScreen">Launch screen</string>
    <string name="stringLaunchScreenDescription">Select which section to show at launch.</string>
    <string name="other">Other</string>
    <string name="ignoreMoviePrefixes">Ignore title prefixes</string>
    <string name="ignoreMoviePrefixesDescription">Ignore prefixes like "A" and "The".</string>
    <string name="browseMedia">Browse artwork</string>
    <string name="advanced">Advanced</string>
    <string name="network">Network shares</string>
    <string name="bufferSize">Stream buffer size</string>
    <string name="bufferSizeDescription">Set the buffer size of the video streaming service.</string>
    <string name="_16kb">16 KB</string>
    <string name="video">Video</string>
    <string name="ignoreFileType">Ignore file format when playing videos</string>
    <string name="ignoreFileTypeDescription">Disable MIME type specific video Intents and use a generic wildcard.</string>
    <string name="disableEthernetWiFiCheck">Disable Ethernet / Wi-Fi check</string>
    <string name="disableEthernetWiFiCheckDescription">Don\'t check for an Ethernet or Wi-Fi connection before connecting to a network share.</string>
    <string name="automaticallyRemoveMoviesFromWatchlist">Automatically remove movies from watchlist</string>
    <string name="automaticallyRemoveMoviesFromWatchlistDescription">Remove movies on the watchlist when marking as watched.</string>
    <string name="confirmBackPressTitle">Confirm back press before exiting</string>
    <string name="confirmBackPressDescription">Require two presses of the Back-button to exit.</string>
    <string name="removeFromWatchlist">Remove from Watch list</string>
    <string name="watchLater">Watch later</string>
    <string name="unidentifiedFiles">Unidentified files</string>
    <string name="forceEnglishApplicationLanguage">Force English application language</string>
    <string name="useEnglishLanguage">Use English language instead of the system language. Requires application restart.</string>
    <string name="listView">List view</string>
    <string name="filters">Filters</string>
    <string name="social">Social</string>
    <string name="folders">Folders</string>
    <string name="scheduledUpdates">Scheduled updates</string>
    <string name="includeAdultContent">Include adult content</string>
    <string name="includeAdultContentDescription">Include adult titles when searching for movies.</string>
    <string name="tvShowEpisodesOrderType">TV show episodes order type</string>
    <string name="tvShowEpisodesOrderTypeDescription">Show newest or oldest episodes first.</string>
    <string name="oldestFirst">Oldest first</string>
    <string name="overviewGridItemSizeTitle">Set overview cover size</string>
    <string name="overviewGridItemSizeDescription">Change the size of movie and TV show covers in the overviews.</string>
    <string name="normal">Normal</string>
    <string name="watchOffline">Watch offline</string>
    <string name="ignoreFilesizeCheckTitle">Ignore file size check for offline watching</string>
    <string name="ignoreFilesizeCheck">Skip the available storage space check when downloading videos for offline watching.</string>
    <string name="alwaysDeleteFileTitle">Always delete file when removing content</string>
    <string name="alwaysDeleteFile">Automatically check the \"Delete file\" option when removing a movie or TV show episode.</string>
    <string name="tvShowSeasonsOrderType">TV show seasons order type</string>
    <string name="tvShowSeasonsOrderTypeDescription">Show newest or oldest seasons first.</string>
    <string name="setEpisodesLayoutDescription">Use a grid or list view to display TV show episodes.</string>
    <string name="setEpisodeLayout">TV show episodes layout</string>
    <string name="clear_filters">Clear filters</string>
    <string name="random_movie">Random movie</string>
    <string name="random_show">Random TV show</string>
    <string name="show_file_location">Show file location(s)</string>
    <string name="show_file_location_description">Make file location(s) visible in the movie and TV show details view.</string>
    <string name="set_pref_language_title">Set preferred language</string>
    <string name="set_pref_language_description">Localize movie and TV show information into selected language. Defaults to English.</string>
    <string name="view_collection_online">View collection online</string>
    <string name="release_year">Release year</string>
    <string name="blur_backdrops_description">Background images for movies and TV shows will be blurry in landscape mode.</string>
    <string name="blur_backdrops">Blur background images</string>
    <string name="early_access">Early access testing</string>
    <string name="chromecast_title">Chromecast support (preview)</string>
    <string name="chromecast_description">Enable support for casting of SMB and UPnP files.</string>
</resources>