<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsUIGeneral" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_action_key"
            android:key="prefsRootAccess"
            android:summary="@string/enableRootAccessDescription"
            android:title="@string/enableRootAccess" />
        <CheckBoxPreference
            android:icon="@drawable/ic_action_settings"
            android:key="prefsConfirmBackPress"
            android:summary="@string/confirmBackPressDescription"
            android:title="@string/confirmBackPressTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_delete_white_24dp"
            android:key="prefsAlwaysDeleteFile"
            android:summary="@string/alwaysDeleteFile"
            android:title="@string/alwaysDeleteFileTitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/network" >
        <ListPreference
            android:defaultValue="@string/_16kb"
            android:entries="@array/bufferSizes"
            android:entryValues="@array/bufferSizes"
            android:icon="@drawable/buffer_size"
            android:key="prefsBufferSize"
            android:summary="@string/bufferSizeDescription"
            android:title="@string/bufferSize" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_action_wifi"
            android:key="prefsDisableEthernetWiFiCheck"
            android:summary="@string/disableEthernetWiFiCheckDescription"
            android:title="@string/disableEthernetWiFiCheck" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_action_download"
            android:key="prefsIgnoreFilesizeCheck"
            android:summary="@string/ignoreFilesizeCheck"
            android:title="@string/ignoreFilesizeCheckTitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/video" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_action_movie"
            android:key="prefsIgnoreFileType"
            android:summary="@string/ignoreFileTypeDescription"
            android:title="@string/ignoreFileType" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/early_access" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_cast_connected_white_24dp"
            android:key="prefsChromecastBeta"
            android:summary="@string/chromecast_description"
            android:title="@string/chromecast_title" />
    </PreferenceCategory>

</PreferenceScreen>