<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search_textbox"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        android:title="@string/stringSearch">
    </item>
    <item
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/stringSort">
        <menu>
            <item
                android:id="@+id/menuSortTitle"
                android:title="@string/sortTitle"/>
            <item
                android:id="@+id/menuSortRelease"
                android:title="@string/sortRelease"/>
            <item
                android:id="@+id/menuSortDuration"
                android:title="@string/sortDuration"/>
            <item
                android:id="@+id/menuSortRating"
                android:title="@string/sortRating"/>
            <item
                android:id="@+id/menuSortWeightedRating"
                android:title="@string/sortWeightedRating"/>
            <item
                android:id="@+id/menuSortAdded"
                android:title="@string/sortAdded"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/filters">
        <menu>
            <item
                android:id="@+id/certifications"
                android:icon="@drawable/ic_action_flag"
                android:title="@string/detailsCertification"/>
            <item
                android:id="@+id/fileSources"
                android:icon="@drawable/ic_insert_drive_file_white_24dp"
                android:title="@string/fileSources"/>
            <item
                android:id="@+id/folders"
                android:icon="@drawable/folder"
                android:title="@string/folders"/>
            <item
                android:id="@+id/genres"
                android:icon="@drawable/ic_action_tags"
                android:title="@string/choiceGenres"/>
             <item
                android:id="@+id/release_year"
                android:icon="@drawable/ic_action_calendar_month"
                android:title="@string/release_year"/>
            <item
                android:id="@+id/clear_filters"
                android:icon="@drawable/ic_action_discard"
                android:title="@string/clear_filters"/>
        </menu>
    </item>
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menuUpdateTitle">
    </item>

    <group android:id="@+id/group1" >
        <item
            android:id="@+id/random"
            android:icon="@drawable/ic_action_puzzle"
            android:title="@string/random_movie">
        </item>
        <item
            android:id="@+id/view_collection_online"
            android:icon="@drawable/ic_action_globe"
            android:title="@string/view_collection_online"
            android:visible="false">
        </item>
        <item
            android:id="@+id/unidentifiedFiles"
            android:icon="@drawable/folder"
            android:title="@string/unidentifiedFiles"/>
    </group>

</menu>