<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_textbox"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        android:title="@string/stringSearch">
    </item>
    <item
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/stringSort">
        <menu>
            <item
                android:id="@+id/menuSortTitle"
                android:title="@string/sortTitle"/>
            <item
                android:id="@+id/menuSortRelease"
                android:title="@string/sortFirstAired"/>
            <item
                android:id="@+id/menuSortNewestEpisode"
                android:title="@string/sortNewestEpisode"/>
            <item
                android:id="@+id/menuSortDuration"
                android:title="@string/sortDuration"/>
            <item
                android:id="@+id/menuSortRating"
                android:title="@string/sortRating"/>
            <item
                android:id="@+id/menuSortWeightedRating"
                android:title="@string/sortWeightedRating"/>
        </menu>
    </item>
    <item
        android:id="@+id/filters"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/filters">
        <menu>
            <item
                android:id="@+id/certifications"
                android:icon="@drawable/ic_flag_white_24dp"
                android:title="@string/detailsCertification"/>
            <item
                android:id="@+id/fileSources"
                android:icon="@drawable/ic_insert_drive_file_white_24dp"
                android:title="@string/fileSources"/>
            <item
                android:id="@+id/folders"
                android:icon="@drawable/ic_folder_open_white_24dp"
                android:title="@string/folders"/>
            <item
                android:id="@+id/genres"
                android:icon="@drawable/ic_label_white_24dp"
                android:title="@string/choiceGenres"/>
            <item
                android:id="@+id/release_year"
                android:icon="@drawable/ic_today_white_24dp"
                android:title="@string/release_year"/>
            <item
                android:id="@+id/available_files"
                android:icon="@drawable/ic_done_white_24dp"
                android:title="@string/choiceAvailableFiles"/>
            <item
                android:id="@+id/offline_files"
                android:icon="@drawable/ic_cloud_download_white_24dp"
                android:title="@string/choiceOffline"/>
            <item
                android:id="@+id/clear_filters"
                android:icon="@drawable/ic_close_white_24dp"
                android:title="@string/clear_filters"/>
        </menu>
    </item>
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menuUpdateTitle">
    </item>

    <group android:id="@+id/group1" >
        <item
            android:id="@+id/random"
            android:icon="@drawable/ic_extension_white_24dp"
            android:title="@string/random_show">
        </item>
        <item
            android:id="@+id/unidentifiedFiles"
            android:icon="@drawable/ic_folder_open_white_24dp"
            android:title="@string/unidentifiedFiles"/>
    </group>

</menu>