<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_settings_white_24dp" >

    <PreferenceCategory android:title="@string/prefsUIGeneral" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/startup_screen"
            android:entryValues="@array/startup_screen_codes"
            android:icon="@drawable/ic_home_white_24dp"
            android:key="prefsStartup"
            android:summary="@string/stringLaunchScreenDescription"
            android:title="@string/stringLaunchScreen" />

        <CheckBoxPreference
            android:icon="@drawable/ic_language_white_24dp"
            android:key="prefsUseEnglishLanguage"
            android:summary="@string/useEnglishLanguage"
            android:title="@string/forceEnglishApplicationLanguage" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chooserMovies" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_queue_white_24dp"
            android:key="prefsRemoveMoviesFromWatchlist"
            android:summary="@string/automaticallyRemoveMoviesFromWatchlistDescription"
            android:title="@string/automaticallyRemoveMoviesFromWatchlist" />
    </PreferenceCategory>

</PreferenceScreen>