<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movie_fav"
        android:icon="@drawable/ic_favorite_outline_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menuFavouriteTitleRemove">
    </item>
    <item
        android:id="@+id/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/menuShareTitle"/>
    <item
        android:id="@+id/watch_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_queue_white_24dp"
        android:title="@string/watchLater">
    </item>
    <item
        android:id="@+id/trailer"
        android:title="@string/detailsTrailer">
    </item>
    <item
        android:id="@+id/watched"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/stringMarkAsWatched">
    </item>
    <item
        android:id="@+id/identify"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/identifyMovieTitle">
    </item>
    <item
        android:id="@+id/editMovie"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/stringEditMovie">
    </item>
    <item
        android:id="@+id/change_cover"
        android:enabled="true"
        android:icon="@drawable/ic_image_white_24dp"
        android:title="@string/browseMedia">
    </item>
    <item
        android:id="@+id/delete_movie"
        android:enabled="true"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menuRemoveTitle">
    </item>

</menu>