<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsIdentification" >
        <Preference
            android:icon="@drawable/ic_language_white_24dp"
            android:key="prefsLanguagePreference"
            android:summary="@string/set_pref_language_description"
            android:title="@string/set_pref_language_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chooserMovies" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_lock_white_24dp"
            android:key="prefsIncludeAdultContent"
            android:summary="@string/includeAdultContentDescription"
            android:title="@string/includeAdultContent" />
    </PreferenceCategory>

</PreferenceScreen>