<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/watched"
        app:showAsAction="never"
        android:title="@string/stringMarkAsWatched"/>
    <item
        android:id="@+id/identify"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="never"
        android:title="@string/identifyEpisodeTitle"/>
    <item
        android:id="@+id/editTvShowEpisode"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="never"
        android:title="@string/stringEditTvShowEpisode">
    </item>
    <item
        android:id="@+id/watchOffline"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/watchOffline"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menuDeleteEpisode"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="never"
        android:title="@string/removeEpisode"/>

</menu>