<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.miz.mizuu.fragments.Prefs"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/prefsUIGeneral" >
        <extra
            android:name="resource"
            android:value="general_prefs" />
    </header>
    <header
        android:fragment="com.miz.mizuu.fragments.Prefs"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/prefsIdentificationAndSearch" >
        <extra
            android:name="resource"
            android:value="identification_search_prefs" />
    </header>
    <header
        android:fragment="com.miz.mizuu.fragments.ScheduledUpdatesFragment"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/scheduledUpdates" />
    <header
        android:fragment="com.miz.mizuu.fragments.Prefs"
        android:icon="@drawable/ic_palette_white_24dp"
        android:title="@string/prefsUI" >
        <extra
            android:name="resource"
            android:value="user_interface_prefs" />
    </header>
    <header
        android:fragment="com.miz.mizuu.fragments.AccountsFragment"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/social" />
    <header
        android:fragment="com.miz.mizuu.fragments.Prefs"
        android:icon="@drawable/ic_extension_white_24dp"
        android:title="@string/advanced" >
        <extra
            android:name="resource"
            android:value="advanced_prefs" />
    </header>
    <header
        android:fragment="com.miz.mizuu.fragments.Prefs"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/other" >
        <extra
            android:name="resource"
            android:value="other_prefs" />
    </header>

</preference-headers>